k8s/lychee-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lychee
  namespace: lychee
spec:
  selector:
    app: lychee
  ports:
  - name: http
    port: 80
    targetPort: 80
  type: ClusterIP
